--- a/package.json
+++ b/package.json
@@ -1,7 +1,13 @@
 {
   "name": "ng-three-examples",
+  "private": true,
   "version": "0.0.0",
   "license": "MIT",
+  "author": {
+    "name": "Lars Gyrup Brink Nielsen",
+    "email": "larsbrinknielsen@gmail.com",
+    "url": "https://www.linkedin.com/in/larsgbn"
+  },
   "angular-cli": {},
   "scripts": {
     "start": "ng serve",
@@ -10,7 +16,6 @@
     "pree2e": "webdriver-manager update",
     "e2e": "protractor"
   },
-  "private": true,
   "dependencies": {
     "@angular/common": "~2.1.0",
     "@angular/compiler": "~2.1.0",
