--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "ng-three-examples",
   "private": true,
-  "version": "0.0.0",
+  "version": "0.1.0",
   "license": "MIT",
   "author": {
     "name": "Lars Gyrup Brink Nielsen",
@@ -27,12 +27,14 @@
     "@angular/router": "~3.1.0",
     "core-js": "^2.4.1",
     "rxjs": "5.0.0-beta.12",
+    "three": "^0.82.1",
     "ts-helpers": "^1.1.1",
     "zone.js": "^0.6.23"
   },
   "devDependencies": {
     "@types/jasmine": "^2.2.30",
     "@types/node": "^6.0.42",
+    "@types/three": "0.0.24",
     "angular-cli": "1.0.0-beta.18",
     "codelyzer": "1.0.0-beta.1",
     "jasmine-core": "2.4.1",
